fixed paddings and more

--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
       </nav>
       <section class="header__background">
         <div class="container header__section">
-          <p class="header__title">Restaurant app</p>
-          <h1 class="header__quote">
-            Why stay hungry when <br />
-            you can order form Eats
-          </h1>
-          <h4 class="header__subtitle">Order in exchange for hunger</h4>
+          <section class="section__txt">
+            <p class="header__title">Restaurant app</p>
+            <h1 class="header__quote">
+              Why stay hungry when <br>
+              you can order form Eats
+            </h1>
+            <h4 class="header__subtitle">Order in exchange for hunger</h4>
+          </section>
           <div class="header__btns">
             <button class="header__btn">
               <span class="btn__txt">Delivery</span>
