fixed main section

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     <main>
       <div class="container">
         <h2 class="main__appworks">How the app works</h2>
-        <section class="main__account">
+
+        <section class="main__section">
+        <!-- <section class="main__account"> -->
           <img src="./images/account-phone.svg" alt="Create an account" />
           <div class="main__block">
             <h3 class="main__subtitle">Create an account</h3>
@@ -73,8 +75,8 @@
               and a desired password
             </h4>
           </div>
-        </section>
-        <section class="main__explore">
+        <!-- </section> -->
+        <!-- <section class="main__explore"> -->
           <div class="main__block">
             <h3 class="main__subtitle">Explore varieties</h3>
             <h2 class="main__title">
@@ -87,7 +89,9 @@
             </h4>
           </div>
           <img src="./images/explore-phone.svg" alt="Explore varieties" />
+        <!-- </section> -->
         </section>
+
       </div>
     </main>
     <footer>
